--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "casino",
+  "name": "casino-online",
   "version": "1.0.0",
-  "description": "",
+  "description": "Online Casino Game",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "mongodb": "^7.1.0",
-    "mongoose": "^9.2.1",
-    "socket.io": "^4.8.3"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "socket.io": "^4.7.2"
   }
 }
