--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "casino-online",
+  "name": "yawata-casino",
   "version": "1.0.0",
-  "description": "Online Casino Game",
-  "main": "app.js",
+  "type": "module",
+  "main": "app.mjs",
   "scripts": {
     "start": "node app.mjs"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
+    "mongodb": "^6.3.0",
     "socket.io": "^4.7.2"
   }
 }
